Complete overhaul; incomplete but works.

--- a/app/index.html
+++ b/app/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>WpdaClient</title>
+    <title>Waze Place Discover &amp; Audit</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
 
-    <link rel="stylesheet" href="{{rootURL}}assets/vendor.css">
-    <link rel="stylesheet" href="{{rootURL}}assets/wpda-client.css">
+    <link rel="stylesheet" href="{{rootURL}}static/ember/assets/vendor.css">
+    <link rel="stylesheet" href="{{rootURL}}static/ember/assets/wpda-client.css">
 
     {{content-for "head-footer"}}
   </head>
   <body>
     {{content-for "body"}}
 
-    <script src="{{rootURL}}assets/vendor.js"></script>
-    <script src="{{rootURL}}assets/wpda-client.js"></script>
+    <script src="{{rootURL}}static/ember/assets/vendor.js"></script>
+    <script src="{{rootURL}}static/ember/assets/wpda-client.js"></script>
 
     {{content-for "body-footer"}}
   </body>
